<resources>
    <string name="app_name">About Me</string>
    <string name="mainactivity_profile_name">Deneb Asecas</string>
    <string name="contentdescription_yellow_star">Yellow star</string>
    <string name="mainactivity_bio_description">Lorem Ipsum is simply dummy text of the printing and typesetting industry. \n\nLorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. \n\nIt was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="mainactiyivty" />
    <string name="mainactivity_what_is_your_nick_name">What is your nickname?</string>
    <string name="mainactivity_done">Done</string>
</resources>